# IOU

./: CMakeLists.txt  CountLabels.cpp  IntersectionOverUnion.cpp  Relabel.cpp
annotazioni/: all_0_labels.pcd  expert_annotation.pcd  expert_annotation_different_labels.pcd  expert_annotation_with_little_difference.pcd  expert_annotation_without_1_label.pcd
annotazioni_originali/: expert_annotation.pcd  expert_annotation_different_labels.pcd  expert_annotation_with_little_difference.pcd  expert_annotation_without_1_label.pcd
linux-build/: CMakeCache.txt  Makefile  cmake_install.cmake
win-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CountLabels.vcxproj  CountLabels.vcxproj.filters  IntersectionOverUnion.sln  IntersectionOverUnion.vcxproj  IntersectionOverUnion.vcxproj.filters  Relabel.vcxproj  Relabel.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
win-build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
win-build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
win-build/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
win-build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
